--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -59,6 +59,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="btnEmpezar"
         style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"
  />
     <TextView
         android:layout_width="wrap_content"
@@ -74,6 +75,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
         style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"
         />
 
 
