--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/selectableItemBackground"
     android:orientation="vertical"
     android:paddingBottom="@dimen/row_padding"
@@ -10,6 +10,7 @@
     android:paddingRight="@dimen/general_padding"
     android:paddingTop="@dimen/row_padding"
     tools:context=".activities.EjerciciosAdapter">
+
     <View
         android:id="@+id/circleView"
         android:layout_width="@dimen/image"
@@ -17,21 +18,26 @@
         android:background="@drawable/torch"/>
 
     <TextView
-        android:layout_toEndOf="@+id/circleView"
+        android:layout_marginTop="18dp"
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
+        android:layout_toEndOf="@id/circleView"
         android:paddingStart="@dimen/text_row_padding_image"
-        android:fontFamily="@font/greek_freak" />
+        android:fontFamily="@font/greek_freak"
+        android:textSize="10dp"/>
 
     <TextView
-        android:layout_alignStart="@+id/titleTextView"
+        android:layout_marginTop="18dp"
         android:id="@+id/subtitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@id/titleTextView"
         android:layout_marginStart="180dp"
         android:paddingStart="@dimen/text_row_padding_image"
-        android:fontFamily="@font/greek_freak" />
+        android:fontFamily="@font/greek_freak"
+        android:textSize="10dp"/>
+
 </RelativeLayout>
