--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -66,20 +66,23 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
+        android:fontFamily="@font/greek_freak"
         android:onClick="onViewCreated"
-        android:text="@string/Read"
-        android:fontFamily="@font/greek_freak"/>
+        android:text="@string/Read" />
+
     <Button
         android:id="@+id/cambiarFoto"
+        style="@style/ButtonStyle"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="@string/cambiarFoto"
         android:layout_below="@id/MostrarDatos"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        style="@style/ButtonStyle"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/greek_freak"
-        />
+        android:text="@string/cambiarFoto" />
     <EditText
         android:layout_marginTop="10dp"
         android:hint="@string/NuevoNombre"
